Removed Reset.css

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,6 +1,5 @@
-@import "reset";
-@import "constants";
-@import "typography";
+@import "./constants.scss";
+@import "./Typography.scss";
 
 /************************* BASE ***************************/
 
