--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -96,6 +96,10 @@ body {
 .events {
   img {
     width: 100%;
+    transition: 0.3s;
+    &:hover {
+      transform: scale(0.95);
+    }
   }
 }
 
@@ -108,13 +112,12 @@ body {
   border-style: solid;
   border-width: 0.2rem !important;
   cursor: pointer;
-
   position: relative;
   z-index: 1;
   @media (hover: hover) {
     &:hover {
       .shadow {
-        opacity: 0.3;
+        opacity: 0.2;
       }
     }
   }
@@ -133,15 +136,16 @@ body {
 }
 
 /************************* ABOUT ***************************/
+
 .members a img {
   -webkit-filter: grayscale(100%); /* safari6.0 - 9.0  */
   filter: grayscale(100%);
   width: 100%;
   transition: 0.3s;
-}
-
-.members a:hover img {
-  filter: none;
+  &:hover {
+    filter: none;
+    transform: scale(0.95);
+  }
 }
 
 .scrollWrapper {
@@ -150,7 +154,6 @@ body {
 }
 .scrollContainer {
   overflow-y: hidden;
-
   overflow-x: auto;
   white-space: nowrap;
   cursor: ew-resize;
@@ -175,6 +178,9 @@ body {
     }
     &:nth-child(3n) {
       height: 85%;
+    }
+    &:last-child {
+      padding-right: $spacer2;
     }
   }
 }
