--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,6 +1,7 @@
 @import "./Reset.scss";
 @import "./constants.scss";
 @import "./Typography.scss";
+@import "./Mixins.scss";
 
 /************************* BASE ***************************/
 
@@ -8,6 +9,10 @@ html,
 body {
   height: 100%;
   position: relative;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 // Sticky footer
@@ -88,7 +93,7 @@ body {
   @media screen and (min-width: $md) {
     font-size: 6.5vw;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $xl) {
     font-size: 8.5rem;
     max-width: 120rem;
   }
@@ -188,4 +193,195 @@ body {
       padding-right: calc(#{$spacer2 + $spacer3});
     }
   }
+}
+
+/************************* JOIN ***************************/
+
+.steps {
+  position: absolute;
+  font-family: "Neue Plak";
+  font-size: 25rem;
+  font-weight: 900;
+  z-index: -1;
+  color: #f2f2f2;
+  line-height: 13rem;
+}
+
+.stepCopy {
+  position: relative;
+  top: 2.5vw;
+  padding-left: 5vw;
+}
+
+.roles a {
+  text-decoration: underline;
+  cursor: pointer;
+  font-family: "Neue Plak";
+  font-weight: 600;
+  text-decoration: none;
+  margin-bottom: 1.5rem;
+  transition: all 0.3s ease;
+  @include md {
+    margin-bottom: 3.5rem;
+  }
+  &:hover {
+    padding-right: 2rem;
+  }
+  &:last-of-type:hover {
+    padding-left: 2rem;
+  }
+  &img:hover {
+    padding-left: 2rem;
+  }
+}
+
+.roles img {
+  vertical-align: middle;
+  padding-left: $spacer1;
+  width: 3rem; 
+  @include md {
+    width: 4rem;
+  }
+}
+
+.panel-wrap {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 90%;
+  transform: translateX(100%);
+  transition: .3s ease-out;
+  z-index: 100;
+}
+.panel {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: black;
+  color: #eee;
+  overflow: auto;
+  padding: $spacer2 $spacer3;
+}
+.panel-wrap-close {
+  transform: translateX(0%);
+}
+.panelNav {
+  position: sticky;
+  top: 0;
+}
+.x {
+  cursor: pointer;
+  font-weight: 600;
+  transition: all 0.3s ease;
+  &:before {
+    height: 0;
+    line-height: 0;
+    transition: 0.3s;
+    content: "\d7";
+    font-size: 2.3rem;
+    color: white;
+    margin-top: 1.1rem;
+    @include md {
+      font-size: 3rem;
+      margin-top: 1.4rem;
+    }
+  }
+}
+.apply {
+  color: black;
+  background-color: white;
+  float: right;
+  border: none;
+  font-family: "NB International";
+  text-transform: uppercase;
+  padding: 1.7rem 2.4rem 1.5rem;
+  cursor: pointer;
+}
+.panel-content-container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+  padding: $spacer4 $spacer2;
+  ol {
+    list-style-type: disc;
+  }
+}
+
+.roleHeadshot img {
+  -webkit-filter: grayscale(100%); /* safari6.0 - 9.0  */
+  filter: grayscale(100%);
+}
+
+#faq-container {
+  @include sm {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
+
+$faq-gutter: 12rem;
+.faq-container {
+  padding-left: 4rem;
+  margin-left: -$faq-gutter !important;
+
+  .grid__item {
+    padding-left: $faq-gutter !important;
+  }
+}
+
+.faq-item {
+  position: relative;
+  font-family: "Neue Plak";
+  p {
+    margin: 0; // Prevent jump on drawer open
+    padding: 0;
+  }
+  margin-bottom: 1.5rem;
+
+  @include md {
+    margin-bottom: 3.5rem;
+  }
+}
+.q {
+  cursor: pointer;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+  margin-left: 4rem;
+  transition: all 0.3s ease;
+  &:before {
+    height: 0;
+    line-height: 0;
+    transition: 0.3s;
+    content: "\d7";
+    position: absolute;
+    left: 0;
+    font-size: 2.3rem;
+    color: #1e1f23;
+    margin-top: 1.1rem;
+    transform-origin: center 0.5rem;
+    transform: rotate(45deg);
+    @include md {
+      font-size: 3rem;
+      margin-top: 1.4rem;
+    }
+  }
+  &.active:before {
+    transform: rotate(180deg);
+  }
+}
+.a-show, .a-hidden {
+  max-height: 0;
+  overflow-y: hidden;
+  transition: max-height 0.3s ease;
+  font-family: "NB International Pro";
+}
+.a-show {
+  max-height: fit-content;
+}
+ol {
+  list-style-type: decimal;
 }
