--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -87,6 +87,109 @@ html {
   }
 }
 
+#ham-nav {
+  text-align: right;
+
+  li {
+    transition: 0.3s;
+
+    h4 {
+      font-size: 5.6rem;
+      margin-top: 6rem;
+    }
+
+    a {
+      text-decoration: none !important;
+    }
+
+    &:hover {
+      opacity: 0.5 !important;
+    }
+  }
+
+  li:first-child {
+    h4 {
+      margin-top: 12rem;
+    }
+  }
+}
+
+#hamburger {
+  position: absolute;
+  right: 0;
+  z-index: 10000;
+}
+
+.hamburger {
+  display: inline-block;
+  cursor: pointer;
+  transition-property: opacity, filter;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+  font: inherit;
+  color: inherit;
+  text-transform: none;
+  background-color: transparent;
+  border: 0;
+  margin: 0 20px 0 0;
+  overflow: visible; }
+.hamburger:hover {
+  opacity: 0.5; }
+.hamburger.is-active:hover {
+  opacity: 0.5; }
+.hamburger.is-active #hamburger-inner,
+.hamburger.is-active #hamburger-inner::before,
+.hamburger.is-active #hamburger-inner::after {
+  background-color: inherit; 
+}
+
+.hamburger-box {
+  width: 3.5rem;
+  height: 3.5rem;
+  display: inline-block;
+  position: relative; }
+
+#hamburger-inner {
+  display: block;
+  top: 50%;
+}
+#hamburger-inner, #hamburger-inner::before, #hamburger-inner::after {
+  width: 3.5rem;
+  height: 0.4rem;
+  background-color: inherit; 
+  position: absolute;
+  transition-property: transform;
+  transition-duration: 0.15s;
+  transition-timing-function: ease; }
+#hamburger-inner::before, #hamburger-inner::after {
+  content: "";
+  display: block; }
+#hamburger-inner::before {
+  top: -8px; }
+#hamburger-inner::after {
+  bottom: -8px; }
+
+.hamburger--spin #hamburger-inner {
+  transition-duration: 0.22s;
+  transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19); }
+.hamburger--spin #hamburger-inner::before {
+  transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in; }
+.hamburger--spin #hamburger-inner::after {
+  transition: bottom 0.1s 0.25s ease-in, transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19); }
+
+.hamburger--spin.is-active #hamburger-inner {
+  transform: rotate(225deg);
+  transition-delay: 0.12s;
+  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
+.hamburger--spin.is-active #hamburger-inner::before {
+  top: 0;
+  opacity: 0;
+  transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out; }
+.hamburger--spin.is-active #hamburger-inner::after {
+  bottom: 0;
+  transform: rotate(-90deg);
+  transition: bottom 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
+
 /************************* HOME ***************************/
 
 .splashTitle {
@@ -242,7 +345,7 @@ html {
   bottom: 0;
   right: 0;
   width: 100%;
-  z-index: 100;
+  z-index: 10;
   background-color: rgba(0,0,0,0.4);
 }
 .panel-darken-close {
@@ -258,7 +361,7 @@ html {
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 100;
 }
 .panel-wrap-close {
   transform: translateX(100%);
