--- a/src/pages/sony/components/About.scss
+++ b/src/pages/sony/components/About.scss
@@ -1,35 +1,29 @@
 @import "./Fonts.scss";
 
-.about-bg {
-  background-color: white;
-  height: 100%;
-  padding: 2% 0;
-}
+// .container {
+//   width: calc(100% - 60px);
+//   margin: auto;
+// }
 
-.container {
-  width: calc(100% - 60px);
-  margin: auto;
-}
+// .about-row {
+//   margin-bottom: 70px;
+// }
 
-.about-row {
-  margin-bottom: 70px;
-}
+// h2 {
+//   font-family: "Neue Plak Extended";
+//   font-size: 3.5rem;
+// }
 
-h2 {
-  font-family: "Neue Plak Extended";
-  font-size: 3.5rem;
-}
+// p {
+//   font-size: 1rem;
+//   margin: 0;
+//   padding: 0;
+// }
 
-p {
-  font-size: 1rem;
-  margin: 0;
-  padding: 0;
-}
-
-.paragraph-text {
-  font-size: 1.25rem;
-  letter-spacing: 2%;
-  line-height: 1.6;
-  font-family: "NB International Pro";
-  font-weight: 300;
-}
+// .paragraph-text {
+//   font-size: 1.25rem;
+//   letter-spacing: 2%;
+//   line-height: 1.6;
+//   font-family: "NB International Pro";
+//   font-weight: 300;
+// }
