--- a/src/pages/sony/components/Hero.scss
+++ b/src/pages/sony/components/Hero.scss
@@ -11,29 +11,24 @@
 }
 
 .headphones-logo {
-  width: auto;
-  height: 680px;
-  margin-top: 40px;
+  width: 100%;
 }
 
-.sony-title {
-  color: white;
-  font-size: 6rem;
-  letter-spacing: 4%;
-}
+// .sony-title {
+//   color: white;
+//   font-size: 6rem;
+//   letter-spacing: 4%;
+// }
 
-.sony-subtitle-container {
-  display: flex;
-}
+// .sony-subtitle-container {
+//   display: flex;
+// }
 
-.sony-subtitle {
-  color: white;
-}
+// .sony-subtitle {
+//   color: white;
+// }
 
-.sony-small-logo {
-  margin-left: 1.5rem;
-  margin-top: -6px;
-}
+
 
 .button {
   background-color: white;
@@ -63,3 +58,5 @@
   margin: 74px 0px 152px;
   cursor: pointer;
 }
+
+
