--- a/src/pages/sony/components/Timeline.scss
+++ b/src/pages/sony/components/Timeline.scss
@@ -9,43 +9,44 @@
 .container {
   width: calc(100% - 60px);
   margin: auto;
-}
-
-.about-row {
-  margin-bottom: 70px;
-}
-
-.header-dark {
   color: white;
 }
 
-p {
-  font-size: 1rem;
-  margin: 0;
-  padding: 0;
-}
+// .about-row {
+//   margin-bottom: 70px;
+// }
 
-.paragraph-text-dark {
-  font-size: 1.25rem;
-  letter-spacing: 2%;
-  line-height: 1.6;
-  font-weight: 300;
-  font-family: "NB International Pro";
-  color: white;
-}
+// .header-dark {
+//   color: white;
+// }
 
-.timeline-title {
-  color: white;
-  padding: 0;
-  margin: 0;
-  font-family: "Neue Plak Extended";
-  font-size: 1.5rem;
-}
+// p {
+//   font-size: 1rem;
+//   margin: 0;
+//   padding: 0;
+// }
 
-.timeline-date {
-  color: white;
-  padding: 0;
-  margin: 0;
-  font-family: "Neue Plak Extended";
-  font-size: 1.25rem;
-}
+// .paragraph-text-dark {
+//   font-size: 1.25rem;
+//   letter-spacing: 2%;
+//   line-height: 1.6;
+//   font-weight: 300;
+//   font-family: "NB International Pro";
+//   color: white;
+// }
+
+// .timeline-title {
+//   color: white;
+//   padding: 0;
+//   margin: 0;
+//   font-family: "Neue Plak Extended";
+//   font-size: 1.5rem;
+// }
+
+// .timeline-date {
+//   color: white;
+//   padding: 0;
+//   margin: 0;
+//   font-family: "Neue Plak Extended";
+//   font-size: 1.25rem;
+// }
