--- a/src/pages/sony/components/NavbarSony.scss
+++ b/src/pages/sony/components/NavbarSony.scss
@@ -14,7 +14,7 @@
 
 .nav-links {
   font-family: "Neue Plak Extended";
-  font-size: 1.125rem;
+  font-size: 2rem;
   color: white;
 }
 
@@ -22,6 +22,8 @@
   display: flex;
   justify-content: space-between;
   height: 40px;
+  width: calc(100% - 40px);
+  margin: auto;
 }
 
 .container {
@@ -30,7 +32,6 @@
   max-width: 1300px;
   margin-right: auto;
   margin-left: auto;
-  padding-right: 50px;
   padding-left: 50px;
 }
 
@@ -58,7 +59,8 @@
 }
 
 .nav-item {
-  height: 80px;
+  height: 40px;
+  margin-left: 30px;
   border-bottom: 2px solid transparent;
 }
 
@@ -82,6 +84,7 @@
 
 .menu-icon {
   display: none;
+  height: 60%;
 }
 
 @media screen and (max-width: 960px) {
