--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -343,6 +343,10 @@ html {
   }
 }
 
+p.partner-with-us {
+  margin-bottom: $spacer2;
+}
+
 /************************* JOIN ***************************/
 
 .steps {
