--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -496,6 +496,10 @@ p.partner-with-us {
   }
 }
 
+.titanic {
+  float: none;
+}
+
 .roleHeadshot img {
   -webkit-filter: grayscale(100%); /* safari6.0 - 9.0  */
   filter: grayscale(100%);
