--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -780,3 +780,68 @@ ol {
     background-color: #282828;
   }
 }
+
+/**************** PARTNERSHIP ***********************/
+.shop-banner {
+  color: #fff;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.shop-content {
+  text-align: center;
+  justify-content: center;
+  width: 100%;
+  margin: auto 11rem;
+}
+
+.shopbanner-title {
+  margin-bottom: 2.6rem;
+}
+
+.shopbanner-description {
+  margin-bottom: 5.6rem;
+}
+
+.order-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff;
+  color: #191919;
+  width: 220px;
+  text-transform: uppercase;
+  padding: 1rem 0;
+  margin: 0 auto;
+}
+
+.order-form p {
+  font-size: 2rem;
+}
+
+.shop-gallery {
+  background: #000;
+}
+
+.shop-gallery-title {
+  color: #fff;
+  margin: auto 11rem;
+}
+
+.shop-gallery-items {
+  margin: auto 11rem;
+}
+
+.background-image {
+  position: absolute;
+  z-index: -1;
+  background-image: url("../images/events/placeholderbanner.jpg");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+}
