--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -851,6 +851,7 @@ ol {
 }
 
 .shop-item {
+  margin-right: 2rem;
   .shop-item-img {
     margin-bottom: 2rem;
   }
@@ -987,4 +988,3 @@ ol {
   text-transform: uppercase;
   color: white;
 }
-
