--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -858,14 +858,15 @@ ol {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 16rem;
+  padding-bottom: 20rem;
 }
 
 .shop-content {
   text-align: center;
   justify-content: center;
   width: 100%;
-  margin: auto 11rem;
+  margin: 0 18rem;
+  margin-top: 8rem;
 }
 
 .shopbanner-title {
