--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -965,6 +965,7 @@ ol {
   z-index: 1000;
   height: calc(80vh);
   width: 90vw;
+  overflow-y: scroll;
 }
 
 .me-container {
@@ -972,7 +973,6 @@ ol {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  overflow-y: auto;
 }
 
 .me-image {
@@ -987,6 +987,7 @@ ol {
   flex-direction: column;
   align-items: center;
   padding: 3.75rem;
+  padding-top: 5.75rem;
 }
 
 .me-small {
@@ -1007,9 +1008,10 @@ ol {
 }
 
 .me-img-small {
-  height: 8vw;
-  width: 8vw;
+  height: 7vw;
+  width: 7vw;
   object-fit: contain;
+  margin-right: 0.5rem;
 }
 
 .me-x {
@@ -1115,40 +1117,15 @@ ol {
   .me-h3-desktop {
     display: none;
   }
+  .me-img-small {
+    height: 15vw;
+    width: 15vw;
+  }
 }
 
-/********* Modal Images ********/
-.me-item1-image1 {
-  height: 20vw;
-  width: auto;
-  background-size: cover;
-  position: relative;
-  background-image: url("../images/shop/example-cat.png");
-}
 
-.me-item1-image2 {
-  height: 20vw;
-  width: auto;
-  background-size: cover;
-  position: relative;
-  background-image: url("../images/shop/example-cat.png");
-}
 
-.me-item1-image3 {
-  height: 20vw;
-  width: auto;
-  background-size: cover;
-  position: relative;
-  background-image: url("../images/shop/example-cat.png");
-}
 
-.me-item1-image4 {
-  height: 20vw;
-  width: auto;
-  background-size: cover;
-  position: relative;
-  background-image: url("../images/shop/example-cat.png");
-}
 
 /********* Carousel ********/
 .carousel .slide {
@@ -1217,4 +1194,42 @@ ol {
   position: relative;
   background-image: url('../images/shop/example-cat.png');
   background-position: center center;
+}
+
+/********* Modal Images Media Query ********/
+@media (max-width: 600px) {
+  .me-item1-image1 {
+    height: 40vw;
+    width: 45vw;
+    background-size: cover;
+    position: relative;
+    background-image: url('../images/shop/example-cat.png');
+    background-position: center center;
+  }
+  .me-item1-image2 {
+    height: 40vw;
+    width: 45vw;
+    background-size: cover;
+    position: relative;
+    background-image: url('../images/shop/community-shirt.png');
+    background-position: center center;
+  }
+  
+  .me-item1-image3 {
+    height: 40vw;
+    width: 45vw;
+    background-size: cover;
+    position: relative;
+    background-image: url('../images/shop/example-cat.png');
+    background-position: center center;
+  }
+  
+  .me-item1-image4 {
+    height: 40vw;
+    width: 45vw;
+    background-size: cover;
+    position: relative;
+    background-image: url('../images/shop/example-cat.png');
+    background-position: center center;
+  }
 }
